# HOST-MCP

./: .env  Dockerfile  app.py  create.py  database.py  database_models.py  docker-compose.yml  main.py  mcp_tools.py  pyproject.toml
