[project]
name = "testserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "mcp>=1.28.0",
    "prisma>=0.15.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "tools>=1.0.30",
]
